prueba con cambio de una foto

--- a/wyckoff.html
+++ b/wyckoff.html
@@ -639,7 +639,7 @@
                   <div class="method-example">
                      <div class="method-example-part">
                        <h5>Esquema #1 fase de acumulacion</h5>
-                           <p> <img src="fotos/acumulacion-e1-fa.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
+                           <p> <img src="fotos/ac_fase_a-01.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
                           <blockquote class="darker-grey">
                              <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                              <footer>Si quieres mas informacion visita esta pagina</cite></footer>
