Actualizacion de fotos de las fases de W

--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
                           Generalmente son aquellos traders que no se permiten a sí mismos quedarse atrapados en una pobre operación. Están cómodos con su posición y no serán sacudidos del mercado por movimientos repentinos. Están operando en el lado correcto del mercado. Su capital generalmente es grande y normalmente pueden leer el mercado con alto grado de competencia.<br><br>
 
                           Además de su rentabilidad, asumirán alguna pérdida eventual, pero ésta será mínima ya que han aprendido a cerrar las operaciones perdedoras rápidamente. Pueden incluso tener más operaciones perdedoras que ganadoras y aun así seguir siendo rentables.<br><br>
-                          Existen dos tipos de manos fuertes:
+                          
+                          <h5><b>Existen dos tipos de manos fuertes:</b></h5>
+                         
                             <br><br><br><br><br><br>
                           <h4><b>LOS	PROFESIONALES	DEL	MERCADO.</b></h4>
                             <p>
