--- a/wyckoff.html
+++ b/wyckoff.html
@@ -318,7 +318,7 @@
                </div>
             </section>
 
-
+            ac_fase_a-01.jpg
             <section id="documenter-2-0" class="method">
                <div class="method-area">
                   <div class="method-copy">
@@ -639,7 +639,7 @@
                   <div class="method-example">
                      <div class="method-example-part">
                        <h5>Esquema #1 fase de acumulacion</h5>
-                           <p> <img src="fotos/ac_fase_a-01.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
+                           <p> <img src="fotos/acumulacion/ac_fase_a-01.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
                           <blockquote class="darker-grey">
                              <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                              <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -663,7 +663,7 @@
                    <div class="method-example">
                       <div class="method-example-part">
                         <h5>Esquema #1 fase de acumulacion</h5>
-                            <p> <img src="fotos/acumulacion-e1-fb.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
+                            <p> <img src="fotos/acumulacion/ac_fase_b-01.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
                            <blockquote class="darker-grey">
                               <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                               <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -693,23 +693,17 @@
                      <div class="method-example">
                         <div class="method-example-part">
                           <h5>Esquema #1 fase de acumulacion</h5>
-                              <p> <img src="fotos/acumulacion-e1-fc.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
+                              <p> <img src="fotos/acumulacion/ac_fase_c-01.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
                              <blockquote class="darker-grey">
                                 <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                 <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                              </blockquote>
                              <h5>Esquema #2 fase de acumulacion</h5>
-                                 <p> <img src="fotos/acumulacion-e2-fc.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
+                                 <p> <img src="fotos/acumulacion/ac_fase_c-01-2.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
                                 <blockquote class="darker-grey">
                                    <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                    <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                                 </blockquote>
-                                <h5>Esquema #2 fase de acumulacion sin spring</h5>
-                                <p> <img src="fotos/acumulacion-sin-spring.gif" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
-                               <blockquote class="darker-grey">
-                                  <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
-                                  <footer>Si quieres mas informacion visita esta pagina</cite></footer>
-                               </blockquote>
                         </div>
                      </div>
                   </div>
@@ -735,7 +729,7 @@
                        <div class="method-example">
                           <div class="method-example-part">
                             <h5>Esquema #1 fase de acumulacion</h5>
-                                <p> <img src="fotos/acumulacion-e1-fd.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
+                                <p> <img src="fotos/acumulacion/ac_fase_d-01.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
                                <blockquote class="darker-grey">
                                   <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                   <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -756,7 +750,7 @@
                          <div class="method-example">
                             <div class="method-example-part">
                               <h5>Esquema #1 fase de acumulacion</h5>
-                                  <p> <img src="fotos/acumulacion-e1-fe.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
+                                  <p> <img src="fotos/acumulacion/ac_fase_e-01.jpg" alt="Esquema1-acumulacion" onclick="Zoom(this)">  </p>
                                  <blockquote class="darker-grey">
                                     <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                     <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -817,7 +811,7 @@
                               <div class="method-example">
                                  <div class="method-example-part">
                                    <h5>Esquema #1 fase de distribucion</h5>
-                                       <p> <img src="fotos/distribucion-e1-fa.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
+                                       <p> <img src="fotos/distribucion/ds_fase_a-01.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
                                       <blockquote class="darker-grey">
                                          <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                          <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -846,7 +840,7 @@
                                 <div class="method-example">
                                    <div class="method-example-part">
                                      <h5>Esquema #1 fase de distribucion</h5>
-                                         <p> <img src="fotos/distribucion-e1-fb.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
+                                         <p> <img src="fotos/distribucion/ds_fase_b-01.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
                                         <blockquote class="darker-grey">
                                            <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                            <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -876,13 +870,13 @@
                                   <div class="method-example">
                                      <div class="method-example-part">
                                        <h5>Esquema #1 fase de distribucion</h5>
-                                           <p> <img src="fotos/distribucion-e1-fc.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
+                                           <p> <img src="fotos/distribucion/ds_fase_c-01.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
                                           <blockquote class="darker-grey">
                                              <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                              <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                                           </blockquote>
                                           <h5>Esquema #2 fase de distribucion</h5>
-                                              <p> <img src="fotos/distribucion-e2-fc.jpg" alt="Esquema2-distribucion" onclick="Zoom(this)">  </p>
+                                              <p> <img src="fotos/distribucion/ds_fase_c-01-2.jpg" alt="Esquema2-distribucion" onclick="Zoom(this)">  </p>
                                              <blockquote class="darker-grey">
                                                 <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                                 <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -908,7 +902,7 @@
                                     <div class="method-example">
                                        <div class="method-example-part">
                                          <h5>Esquema #1 fase de distribucion</h5>
-                                             <p> <img src="fotos/distribucion-e1-fd.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
+                                             <p> <img src="fotos/distribucion/ds_fase_d-01.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
                                             <blockquote class="darker-grey">
                                                <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                                <footer>Si quieres mas informacion visita esta pagina</cite></footer>
@@ -931,7 +925,7 @@
                                       <div class="method-example">
                                          <div class="method-example-part">
                                            <h5>Esquema #1 fase de distribucion</h5>
-                                               <p> <img src="fotos/distribucion-e1-fe.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
+                                               <p> <img src="fotos/distribucion/ds_fase_e-01.jpg" alt="Esquema1-distribucion" onclick="Zoom(this)">  </p>
                                               <blockquote class="darker-grey">
                                                  <p><a href="https://stockcharts.com/school/doku.php?id=chart_school:market_analysis:the_wyckoff_method#analyses_of_trading_ranges">https://stockcharts.com/</a>.</p>
                                                  <footer>Si quieres mas informacion visita esta pagina</cite></footer>
