--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                             <li class="dx-nav-0-item ">
                                <a class="dx-nav-0-link" href="./wyckoff.html">Wyckoff</a>
                             </li>
-                            <!--<li class="dx-nav-0-item ">
+                            <li class="dx-nav-0-item ">
                                <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
-                            </li>
+                            </li><!--
                             <li class="dx-nav-0-item ">
                                <a class="dx-nav-0-link" href="./dow.html">Dow</a>
                             </li>
