corecceccion de imagen

--- a/elliot.html
+++ b/elliot.html
@@ -397,7 +397,7 @@
                     <div class="method-example-part">
                          <p>
                           <h5><b>Similitud</b></h5>
-                             <p> <img src="fotos/elliot/koch.gif  alt="similitud-similitud" align="middle  onclick="Zoom(this)"> </p>
+                             <p> <img src="fotos/elliot/koch.gif" alt="similitud-similitud" align="middle  onclick="Zoom(this)"> </p>
                            <blockquote class="darker-grey">
                               <p><a href="https://es.wikipedia.org/wiki/Autosimilaridad">Curva de Koch </a>.</p>
                               <footer>“Una curva de Koch presenta una autosimilaridad exacta infinitamente repitiente a medida que se aumenta su tamaño..”</cite></footer>
