actualizacion de cntenido

--- a/elliot.html
+++ b/elliot.html
@@ -199,7 +199,7 @@
                   </div>
                   <div class="method-example">
                      <div class="method-example-part">
-                        <h5>Richard D. Wyckoff</h5>
+                        <h5> Ralph Nelson Elliott </h5>
                         <p>                            
                               <p> <img src="fotos/elliott .jpg" alt="foto_elliot" align="middle" onclick="Zoom(this)"> </p>
                               <p> Ralph Nelson Elliott fue un economista estadounidense, nacido el 28 de julio de 1871 en Marysville, Kansas. </p>
@@ -292,7 +292,7 @@
                   </div>
                  <div class="method-example">
                     <div class="method-example-part">
-                      <h5><b>FOTOS Y EJEMPLOS</b></h5>
+                      <h5><b>Fibonacci y las Ondas de Elliott</b></h5>
                         <p>   
                         <p> <img src="fotos/elliot/wave2.jpg" alt="foto_elliot" align="middle" onclick="Zoom(this)"> </p>
                            <blockquote class="darker-grey">
@@ -397,7 +397,7 @@
                     <div class="method-example-part">
                          <p>
                           <h5><b>Similitud</b></h5>
-                             <p> <img src="fotos/elliot/koch.gif  alt="similitud-similitud" align="middle  onclick="Zoom(this)"> </p>
+                             <p> <img src="fotos/elliot/koch.gif"  alt="similitud-similitud" align="middle  onclick="Zoom(this)"> </p>
                            <blockquote class="darker-grey">
                               <p><a href="https://es.wikipedia.org/wiki/Autosimilaridad">Curva de Koch </a>.</p>
                               <footer>“Una curva de Koch presenta una autosimilaridad exacta infinitamente repitiente a medida que se aumenta su tamaño..”</cite></footer>
@@ -433,38 +433,15 @@
             <!-- inicio del tercer articulo-->
               <!-- inicio del Contenido del tercer articulo, izquierdo -->
 
-            <section id="documenter-3" class="method">
+            <section id="documenter-4" class="method">
                <div class="method-area">
                   <div class="method-copy">
                      <div class="method-copy-padding">
-                        <h3 id="handling-errors"><b>Ciclos del mercado</b></h4>
+                        <h3 id="handling-errors"><b>Pautas de Impulso</b></h4>
                         <p>
-                           Según Wyckoff, el mercado puede entenderse y anticiparse a través de un análisis detallado de la oferta y la demanda, que se puede determinar estudiando la acción del precio, el volumen y el tiempo. Como corredor, estaba en posición de observar las actividades de individuos y grupos altamente exitosos que dominaban temas específicos y podía descifrar, mediante el uso de lo que él llamó vertical (barra) y figura (punto y figura) Cartas, las intenciones futuras de esos grandes intereses. En la figura a continuación se muestra un esquema idealizado de cómo conceptualizó la preparación y ejecución de los grandes intereses para los mercados alcistas y bajistas. El tiempo para ingresar pedidos largos es hacia el final de la preparación para un margen de precios o mercado alcista (acumulación de grandes líneas de acciones), mientras que el tiempo para iniciar posiciones cortas se encuentra al final de la preparación para el margen de precios.<br><br>
-
-                           Cuáles son las diferentes fases del ciclo según Wyckoff?.<br><br>
-
-                           En el gráfico de la derecha, se pueden ver las diferentes fases de un ciclo del mercado. En ella podemos ver cuando llevan en control los compradores, cuando pierden fuerza y cuando toman el control los vendedores. También podemos ver, que hacen las manos fuertes del mercado en las zonas o fases de consolidación.<br><br>
-
-                           El grafico muestra las siguientes fases:<br><br>
-
-                           <b>Fase de Acumulación</b> — El dinero profesional o manos fuertes del mercado ven que los precios son bajos y acumulan sus posiciones de compras en dicho rango. El mercado, por lo general, hará que los precios se muevan en lateral durante un período prolongado de tiempo haciendo que la mayoría de los traders retail se desgasten en su paciencia y en su capital y es en esos momentos cuando los profesionales van comprando todo lo que los pequeños inversores van soltando, por lo que el volumen de contratación se hace “constante” y suele ser “alto”.<br><br>
-
-                           <b>Fase de Mark Up</b> — En esta fase, el precio del activo subyacente comienza a subir debido al proceso de acumulación anterior. En esta fase los profesionales, “el dinero inteligente”, dejan que el mercado haga su trabajo provocando las subidas de precio y se incremente el interés de los pequeños inversores por entrar en dicho mercado para no perderse la subida que se espera. En ocasiones, incluso, el profesional realiza reacumulaciones dando inicialmente, apariencia de haber llegado a un proceso de distribución, que son los procesos con los que se culminan los ciclos alcistas.<br><br>
-
-                           <b>Fase de Distribución</b> — Aquí, el profesional piensa que el activo ha llegado a un punto de sobrevaloración y que se ha sobredimensionado el precio por lo que comienza a distribuir sus participaciones que adquirió en la fase de acumulación. Esto hace que el precio se frene para incentivar al resto de compradores a entrar al mercado, para no perderse la “fiesta” y así dar la contrapartida a los profesionales que realmente tienen la intención de dejar el mercado por el lado alcista.<br><br>
-
-                           <b>Fase de Mark Down</b> — Una vez que el dinero inteligente deja su papel a los compradores rezagados, estos quedan atrapados por que el precio comienza  a caer, ya que las manos fuertes no quieren el activo a esos precios tan elevados, y  “ellos” van a tener la paciencia y el dinero suficiente para que cuando el precio comience a estar a niveles “baratos” volver a comprar, pensemos en el idílico termino que cualquiera quiere en la vida, adquirir un bien o  activo “barato para venderlo caro”.<br><br>
-
-                           Entre estas cuatro fases que R. Wyckoff nos marca, tenemos también unas intermedias. Estas son:<br><br>
-
-                           <b>Fase de reacumulación</b> — Esta fase tiene lugar cuando los mercados se detienen en su subida, estos es debido a que los compradores, ansiosos, toman sus beneficios de forma anticipada. Esta es una zona donde el profesional aprovecha para dar la contrapartida a los traders que salen precipitadamente de la tendencia y que para ellos es el proceso de re acumular con el fin de obtener mayores beneficios en la zona alta de la tendencia.<br><br>
-
-                           <b>Fase de redistribución</b> — Esta es la fase en la que los bajistas, ansiosos de tomar beneficios, cierran sus cortos mientras que otros traders no desean perderse el movimiento y van tomando operaciones bajistas conforme va “cayendo el cuchillo” hasta que se cortan las manos.<br><br>
-
-                           <b>Rango de trading</b>
-                           En la practica, las zonas de acumulacion y distribucion, son lugares donde la tendencia anterior (hacia arriba o hacia abajo) se ha detenido y existe un equilibrio relativo entre la oferta y la demanda, a ella tambien se le conoce como rangos de trading (TR), Las instituciones y otros grandes intereses profesionales se preparan para su próxima campaña alcista (o bajista) a medida que acumulan (o distribuyen) acciones dentro del TR. Tanto en la TR como en la distribución, el Hombre Compuesto está comprando y vendiendo activamente, con la distinción de que, en la acumulación, las acciones compradas superan a las vendidas, mientras que en la distribución ocurre lo contrario. La extensión de la acumulación o distribución determina la causa que se desarrolla en el movimiento subsiguiente fuera de la TR.<br><br>
-
-                           Un analista de Wyckoff exitoso debe ser capaz de anticipar y juzgar correctamente la dirección y la magnitud del movimiento fuera de un TR. Afortunadamente, Wyckoff ofrece pautas comprobadas por el tiempo para identificar y delinear las fases y los eventos dentro de un TR, que a su vez proporcionan la base para estimar los objetivos de precios en la tendencia posterior. Estos conceptos se ilustran en los siguientes cuatro esquemas; dos que representan variantes comunes de TR de acumulación, seguidas de dos ejemplos de TR de distribución.<br><br>
+                           Se llama de esta forma a la secuencia conformada por las ondas 1 a 5. <br><br>
+                           Normalmente, en una pauta de impulso, y considerando las ondas 1, 3 y 5 se produce el siguiente efecto: dos de las tres ondas tienen características similares en cuanto a su duración temporal y en la variación de precios que implican, mientras que la restante presenta una extensión de alguno de los dos aspectos anteriores –duración, variación de precios- o de ambos simultáneamente. <br><br>
+                           <b>Pasando a la descripción particular de las Ondas: </b> 
 
                         </p>
                      </div>
@@ -472,28 +449,14 @@
                   <div class="method-example">
                      <div class="code-curl code-div active-code">
                         <div class="method-example-part">
-                          <h5>Ciclo del mercado</h5>
-                            <p> <img src="fotos/fases-mercado.jpg" alt="fases-del-mercado" onclick="Zoom(this)">  </p>
+                          <h5>Ondas de Impulso</h5>
+                            <p> <img src="fotos/elliot/ondas-impulsivas.jpg" alt="fases-del-mercado" onclick="Zoom(this)">  </p>
                           <p>
                              <blockquote class="darker-grey">
-                                <p><a href="https://www.enbolsa.net/los-ciclos-r-wyckoff/">https://www.enbolsa.net</a>.</p>
+                                <p><a href="https://es.wikipedia.org/wiki/Teor%C3%ADa_de_las_Ondas_de_Elliott">https://es.wikipedia.org</a></p>
                                 <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                              </blockquote>
                            </p>
-                          <p>
-                            <h5>Fases del mercado</h5>
-                              <p> <img src="fotos/fases-mercado2.jpg" alt="fases-del-mercado" onclick="Zoom(this)">  </p>
-                             <blockquote class="darker-grey">
-                                <p><a href="https://www.enbolsa.net/los-ciclos-r-wyckoff/">https://www.enbolsa.net</a>.</p>
-                                <footer>Si quieres mas informacion visita esta pagina</cite></footer>
-                             </blockquote>
-                             <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                             <h5>Rango de trading</h5>
-                               <p> <img src="fotos/rango-trading.jpg" alt="Rango de trading" onclick="Zoom(this)">  </p>
-                              <blockquote class="darker-grey">
-                                 <p><a href="http://www.trade2win.com/articles/1094-range-breakouts-trading-tactics/p/3?group=methodologies&topic=technical-analysis">http://trade2win.com</a>.</p>
-                                 <footer>Si quieres mas informacion visita esta pagina</cite></footer>
-                              </blockquote>
                           </p>
                         </div>
                      </div>
@@ -503,7 +466,7 @@
 <!-- FIN DEL TERCER ARTICULO -->
 
         <!-- INICIO DEL CUARTO ARTICULO -->
-			<section id="documenter-4" class="method">
+			<section id="documenter-4-1" class="method">
                <div class="method-area">
                   <div class="method-copy">
                      <div class="method-copy-padding">
@@ -527,7 +490,7 @@
                </div>
             </section>
           <!-- INICIO DEL CUARTO.1 ARTICULO -->
-            <section id="documenter-4-1" class="method">
+            <section id="documenter-4-2" class="method">
                <div class="method-area">
                   <div class="method-copy">
                      <div class="method-copy-padding">
