aCTUALIZACION DE CONTENIDO

--- a/wyckoff.html
+++ b/wyckoff.html
@@ -590,8 +590,8 @@
                   <div class="method-copy">
                      <div class="method-copy-padding">
                         <h3 id="handling-errors"><b>Fase de acumulacion</b></h4>
-                          <p>La fase de acumulación es aquel proceso por el cual los profesionales (las manos fuertes) le compran, poco a poco, a las manos débiles tantos activos como les sea posible hasta que la oferta desaparece por completo. Será entonces y no antes cuando, al no haber resistencia que dificulte el ascenso, los precios subirán, dando lugar a una fase alcista de mercado.<br>
-                            <iframe src="https://player.vimeo.com/video/298311473" width="530" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                          <p>La fase de acumulación es aquel proceso por el cual los profesionales (las manos fuertes) le compran, poco a poco, a las manos débiles tantos activos como les sea posible hasta que la oferta desaparece por completo. Será entonces y no antes cuando, al no haber resistencia que dificulte el ascenso, los precios subirán, dando lugar a una fase alcista de mercado.<br><br><br>
+                            <iframe width="600" height="400" src="https://www.youtube.com/embed/_jHrFZW5K6A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           </p> 
                         </p>
                      </div>
@@ -768,7 +768,7 @@
                                     <h3 id="handling-errors"><b>Fase de Distribucion</b></h4>
                                       <p>La fase de distribución es el proceso por el cual las manos fuertes venderán, poco a poco, sus activos hacia las manos débiles hasta que ya no quede nadie dispuesto a seguir comprando y los precios caigan por falta de demanda.<br><br>
                                     </p>
-                                    <iframe src="https://player.vimeo.com/video/298307480" width="530" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>     
+                                    <iframe width="600" height="400" src="https://www.youtube.com/embed/HLBgJ0NdWJc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     
 
                                  </div>
                               </div>
