--- a/elliot.1.html
+++ b/elliot.1.html
@@ -129,7 +129,7 @@
                            <li><a href="#documenter-3-4">Afinidad</a></li>
                          </ol>
                       </li>
-                      <li><a href="#documenter-4"><i class="fa fa-line-chart"></i>Ondas de Impulso <b>+</b></a>
+                      <li><a href="#documenter-4"><i class="fa fa-line-chart"></i>La Onda 1<b>+</b></a>
                         <ol>
                           <li><a href="#documenter-4-1">La Onda 1</a></li>
                           <li><a href="#documenter-4-2">La Onda 2</a></li>
@@ -519,18 +519,14 @@
                   <div class="method-copy">
                      <div class="method-copy-padding">
                         <h3 id="handling-errors"><b>Pautas de Impulso</b></h4>
-                        <p>
-                           Se llama de esta forma a la secuencia conformada por las ondas 1 a 5. <br><br>
-                           Normalmente, en una pauta de impulso, y considerando las ondas 1, 3 y 5 se produce el siguiente efecto: dos de las tres ondas tienen características similares en cuanto a su duración temporal y en la variación de precios que implican, mientras que la restante presenta una extensión de alguno de los dos aspectos anteriores –duración, variación de precios- o de ambos simultáneamente. <br><br>
-                           
-                           Combinando el Método Wyckoff y la Ondas de Elliott coinciden en la acción del precio y se obtiene una potente sinergia en un Ciclo de Vida de Análisis de Mercado.
-                          <br><br>
-                            Idea del gráfico obtenida de Wyckoff analytics: 
-                          <u>
-                            <li> Wyckoff desde la acción del precio y el volumen</li>
-                            <li> Elliott desde la acción del precio.</li>
-                          </u>
-                        </p>
+                           <p>
+                              <h3><b>ONDA 1</b></h3>
+                               <b>Onda (I):</b> La onda (I) raramente manifiesta su intención, son pocos los que la identifican.
+                                <br>
+                                El inicio de la Onda (I), final de la onda 5 (bajista), vista desde Wyckoff se identifica como el (Spring) una penetración del precio en mininos en una zona de soporte dentro de un rango lateral, esos mínimos o soporte es una de las zonas primaria, llamada "SC" que rápidamente se da la vuelta y retorna al rango del cual salió. 
+                                <br> <br>
+                                Es un claro ejemplo de ‘trampa bajista’ porque el hecho de atravesar el soporte parece una señal de que la oferta tiene el control de nuevo de la tendencia bajista. Siendo la entrada fuerte de la demanda la que impulsa de nuevo el precio al alza con rangos y volúmenes relativamente altos, esto nos proporciona un rally a la parte alta del rango (Trading ranges).  
+                            </p>
                      </div>
                   </div>
                   <div class="method-example">
@@ -938,13 +934,8 @@
                                   <div class="method-copy-padding">
                                      <h3><b>ONDA DE CORRECCION TIPO "C"</b></h3>
                                      <p>
-                                       <b> Onda C:</b> Son terceras ondas y tienen las mismas características, la perforación del (ICE) o zona de trading ranges de Wyckof confirman lo devastadoras que son a la baja. <br><br>
+                                       <b> Onda C:</b> Son terceras ondas y tienen las mismas características, la perforación del (ICE) o zona de trading ranges de Wyckof confirman lo devastadoras que son a la baja. 
 
-                                       La onda C tiene una longitud de al menos el 61,8% de la onda A. Podría ser más corta en cuyo caso normalmente es un fallo, lo que predice una aceleración en la dirección opuesta. <br><br>
-                                       
-                                       En general, la onda C es igual a la onda A o recorre una distancia del 161,8% de la onda A.  <br><br>
-                                       La onda C suele llegar al 161,8% de la longitud de la onda A en una plana expandida. <br><br>
-                                       En un triángulo contracto la onda C suele ser el 61,8% de la onda A.
                                    </p>
                                   </div>
                                </div>
