--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <!-- CSS Style -->
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" type="text/css" href="css/jquery.mobile-menu.css">
-      <link rel="stylesheet" type="text/css" href="css/style.css" media="all">
-      <link rel="stylesheet" type="text/css" href="css/responsive.css">
+      <link rel="stylesheet" type="text/css" href="./css/jquery.mobile-menu.css">
+      <link rel="stylesheet" type="text/css" href="./css/style.css" media="all">
+      <link rel="stylesheet" type="text/css" href="./css/responsive.css">
    </head>
    <body id="pixxett-api">
       <div id="page">
