actualizacion de objetivos de las ondas ABC

--- a/elliot.html
+++ b/elliot.html
@@ -861,7 +861,8 @@
                                     <p>
                                        <b> Onda A:</b> Es la onda mas peligrosa para un cambio de tendencia alcista a Bajista y donde la mayoría de (manos débiles) son cazadas por pensar o predecir que forma parte del impulso de la onda (V), La mayoría cree que es un Pull-back llevados aun por las buenas noticias y la euforia. <br><br>
                                        Al igual que la onda 1 de la pauta de impulso, es bastante difícil su identificación, dado que sus primeras manifestaciones tienden a confundirse con un leve retroceso que dará paso a una continuación de la tendencia que venía desarrollándose. La confirmación de que se está en presencia de esta onda iniciadora de una pauta correctiva se obtiene cuando ocurren sucesivos retrocesos de los precios con respecto a la tendencia principal. También puede servir como buen colaborador en el análisis el volumen de operaciones y su evolución. <br><br>
-
+                                       <b>Objetivos para la onda A</b> <br>
+                                       Después de un triángulo en una quinta onda, la onda A se retrasa hasta la onda 2 del triángulo previo a la onda 5. <br> Cuando la onda A es parte de un triángulo, una onda B o una onda 4 a menudo se retrasa el 38,2% del total de la quinta onda anterior (no sólo la quinta de la quinta) en territorio de la 4ª onda  anterior. En un zigzag a menudo se retrasa el 61,8% de  la quinta onda.
                                   </p>
                                  </div>
                               </div>
@@ -916,7 +917,11 @@
                                   <div class="method-copy-padding">
                                      <h3><b>ONDA DE CORRECCION TIPO "B"</b></h3>
                                      <p>
-                                       <b> Onda B:</b> Las ondas B alcistas suelen ser la (trampa), es un LPSY (Ultimo punto de apoyo de la oferta) de Wyckoff y donde su retroceso al 100% lo confirma.  
+                                       <b> Onda B:</b> Las ondas B alcistas suelen ser la (trampa), es un LPSY (Ultimo punto de apoyo de la oferta) de Wyckoff y donde su retroceso al 100% lo confirma.  <br><br>
+                                       En un zigzag, la onda B en general se retrasa un 38,2%  o 61,8% de la onda A. En una plana, es aproximadamente igual a la onda A. 
+                                       <br><br>
+                                       <b>Objetivos para la onda B</b>
+                                       <br>En una plana expandida, por lo general se desplazará una distancia de 138,2% de la onda A.
                                    </p>
                                   </div>
                                </div>
@@ -939,9 +944,8 @@
                                      <h3><b>ONDA DE CORRECCION TIPO "C"</b></h3>
                                      <p>
                                        <b> Onda C:</b> Son terceras ondas y tienen las mismas características, la perforación del (ICE) o zona de trading ranges de Wyckof confirman lo devastadoras que son a la baja. <br><br>
-
                                        La onda C tiene una longitud de al menos el 61,8% de la onda A. Podría ser más corta en cuyo caso normalmente es un fallo, lo que predice una aceleración en la dirección opuesta. <br><br>
-                                       
+                                       <b>Objetivos para la onda C</b><br>
                                        En general, la onda C es igual a la onda A o recorre una distancia del 161,8% de la onda A.  <br><br>
                                        La onda C suele llegar al 161,8% de la longitud de la onda A en una plana expandida. <br><br>
                                        En un triángulo contracto la onda C suele ser el 61,8% de la onda A.
